Add functions to start and stop fabric network. Add automation script for cURL experiment.
